--- a/packages/fluent/scss/toolbar/_variables.scss
+++ b/packages/fluent/scss/toolbar/_variables.scss
@@ -1,67 +1,79 @@
 @use "sass:map";
 @use "../core/" as *;
 
-/// The horizontal padding of the toolbar.
+/// The horizontal padding of the small Toolbar.
 /// @group toolbar
 $kendo-toolbar-sm-padding-x: map.get( $kendo-spacing, 1 ) !default;
+/// The horizontal padding of the medium Toolbar.
+/// @group toolbar
 $kendo-toolbar-md-padding-x: map.get( $kendo-spacing, 2 ) !default;
+/// The horizontal padding of the large Toolbar.
+/// @group toolbar
 $kendo-toolbar-lg-padding-x: map.get( $kendo-spacing, 2.5 ) !default;
 
-/// The vertical padding of the toolbar.
+/// The vertical padding of the small Toolbar.
 /// @group toolbar
 $kendo-toolbar-sm-padding-y: map.get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the medium Toolbar.
+/// @group toolbar
 $kendo-toolbar-md-padding-y: map.get( $kendo-spacing, 2 ) !default;
+/// The vertical padding of the large Toolbar.
+/// @group toolbar
 $kendo-toolbar-lg-padding-y: map.get( $kendo-spacing, 2.5 ) !default;
 
-/// The spacing between the toolbar tools.
+/// The spacing between the tools of the small Toolbar.
 /// @group toolbar
 $kendo-toolbar-sm-spacing: map.get( $kendo-spacing, 2 ) !default;
+/// The spacing between the tools of the medium Toolbar.
+/// @group toolbar
 $kendo-toolbar-md-spacing: map.get( $kendo-spacing, 2 ) !default;
+/// The spacing between the tools of the large Toolbar.
+/// @group toolbar
 $kendo-toolbar-lg-spacing: map.get( $kendo-spacing, 2 ) !default;
 
-/// Width of the border around the toolbar.
+/// The width of the border around the Toolbar.
 /// @group toolbar
 $kendo-toolbar-border-width: 1px !default;
 
-/// Font family of the toolbar.
+/// The font family of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-font-family: var( --kendo-font-family, inherit ) !default;
-/// Font size of the toolbar.
+/// The font size of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-font-size: var( --kendo-font-size, inherit ) !default;
-/// Line height of the toolbar.
+/// The line height of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-line-height: var( --kendo-line-height, normal ) !default;
 
-/// Background color of the toolbar.
+/// The background color of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-bg: get-theme-color-var( neutral-10 ) !default;
-/// Text color of the toolbar.
+/// The text color of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-text: var( --kendo-component-text, inherit ) !default;
-/// Color of the border around the toolbar.
+/// The color of the border around the Toolbar.
 /// @group toolbar
 $kendo-toolbar-border: var( --kendo-component-border, initial ) !default;
 
-/// Color of the separator border of the toolbar.
+/// The color of the separator border of the Toolbar.
 /// @group toolbar
 $kendo-toolbar-separator-border: get-theme-color-var( neutral-60 ) !default;
 
-/// The width of the input in the toolbar.
+/// The width of the input in the Toolbar.
 /// @group toolbar
 $kendo-toolbar-input-width: 10em !default;
 
-/// Border width of the focused toolbar item.
+/// The border width of the focused Toolbar item.
 /// @group toolbar
 $kendo-toolbar-item-focus-outline-width: 1px !default;
-/// Border style of the focused toolbar item.
+/// The border style of the focused Toolbar item.
 /// @group toolbar
 $kendo-toolbar-item-focus-outline-style: solid !default;
-/// Border color of the focused toolbar item.
+/// The border color of the focused Toolbar item.
 /// @group toolbar
 $kendo-toolbar-item-focus-outline-color: get-theme-color-var( neutral-130 ) !default;
 
-/// Sizes map for the toolbar.
+/// The sizes map for the Toolbar.
 /// @group toolbar
 $kendo-toolbar-sizes: (
     sm: (
