--- a/packages/bootstrap/scss/treeview/_variables.scss
+++ b/packages/bootstrap/scss/treeview/_variables.scss
@@ -1,46 +1,70 @@
-// Treeview
+// TreeView
 
-/// Font family of the treeview component.
+/// The font family of the TreeView.
 /// @group treeview
 $kendo-treeview-font-family: $kendo-font-family !default;
-/// Font size of the treeview component.
+/// The font size of the TreeView.
 /// @group treeview
 $kendo-treeview-font-size: $kendo-font-size-md !default;
+/// The font size of the small TreeView.
+/// @group treeview
 $kendo-treeview-sm-font-size: $kendo-font-size-sm !default;
+/// The font size of the medium TreeView.
+/// @group treeview
 $kendo-treeview-md-font-size: $kendo-font-size-md !default;
+/// The font size of the large TreeView.
+/// @group treeview
 $kendo-treeview-lg-font-size: $kendo-font-size-md !default;
-/// Line height of the treeview component.
+/// The line height of the TreeView.
 /// @group treeview
 $kendo-treeview-line-height: $kendo-line-height-md !default;
+/// The line height of the small TreeView.
+/// @group treeview
 $kendo-treeview-sm-line-height: k-math-div( 20, 14 ) !default;
+/// The line height of the medium TreeView.
+/// @group treeview
 $kendo-treeview-md-line-height: $kendo-line-height-md !default;
+/// The line height of the large TreeView.
+/// @group treeview
 $kendo-treeview-lg-line-height: $kendo-line-height-md !default;
 
-/// Indentation of child groups in treeview component.
+/// The indentation of child groups in the TreeView.
 /// @group treeview
 $kendo-treeview-indent: 16px !default;
 
-/// Horizontal padding of treeview items.
+/// The horizontal padding of the TreeView items.
 /// @group treeview
 $kendo-treeview-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+/// The horizontal padding of the small TreeView items.
+/// @group treeview
 $kendo-treeview-sm-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// The horizontal padding of the medium TreeView items.
+/// @group treeview
 $kendo-treeview-md-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+/// The horizontal padding of the large TreeView items.
+/// @group treeview
 $kendo-treeview-lg-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
-/// Vertical padding of treeview items.
+/// The vertical padding of the TreeView items.
 /// @group treeview
 $kendo-treeview-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the small TreeView items.
+/// @group treeview
 $kendo-treeview-sm-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the medium TreeView items.
+/// @group treeview
 $kendo-treeview-md-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the large TreeView items.
+/// @group treeview
 $kendo-treeview-lg-item-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
-/// Border width of treeview items.
+/// The border width of the TreeView items.
 /// @group treeview
 $kendo-treeview-item-border-width: 0px !default;
-/// Border radius of treeview items.
+/// The border radius of the TreeView items.
 /// @group treeview
 $kendo-treeview-item-border-radius: k-map-get( $kendo-spacing, 1 ) !default;
 
 
-/// The sizes of the treeview.
+/// The sizes map of the TreeView.
 /// @group treeview
 $kendo-treeview-sizes: (
     sm: (
@@ -64,75 +88,75 @@ $kendo-treeview-sizes: (
 ) !default;
 
 
-/// Background color of the treeview component.
+/// The background color of the TreeView.
 /// @group treeview
 $kendo-treeview-bg: null !default;
-/// Text color of the treeview component.
+/// The text color of the TreeView.
 /// @group treeview
 $kendo-treeview-text: $kendo-component-text !default;
-/// Border color of the treeview component.
+/// The border color of the TreeView.
 /// @group treeview
 $kendo-treeview-border: null !default;
 
-/// Background color of hovered treeview items.
+/// The background color of hovered TreeView items.
 /// @group treeview
 $kendo-treeview-item-hover-bg: $kendo-hover-bg !default;
-/// Text color of hovered treeview items.
+/// The text color of hovered TreeView items.
 /// @group treeview
 $kendo-treeview-item-hover-text: $kendo-hover-text !default;
-/// Border color of hovered treeview items.
+/// The border color of hovered TreeView items.
 /// @group treeview
 $kendo-treeview-item-hover-border: $kendo-treeview-item-hover-bg !default;
-/// Background gradient of hovered treeview items.
+/// The background gradient of hovered TreeView items.
 /// @group treeview
 $kendo-treeview-item-hover-gradient: null !default;
 
-/// Background color of selected treeview items.
+/// The background color of selected TreeView items.
 /// @group treeview
 $kendo-treeview-item-selected-bg: $kendo-selected-bg !default;
-/// Text color of selected treeview items.
+/// The text color of selected TreeView items.
 /// @group treeview
 $kendo-treeview-item-selected-text: $kendo-selected-text !default;
-/// Border color of selected treeview items.
+/// The border color of selected TreeView items.
 /// @group treeview
 $kendo-treeview-item-selected-border: $kendo-treeview-item-selected-bg !default;
-/// Background gradient of selected treeview items.
+/// The background gradient of selected TreeView items.
 /// @group treeview
 $kendo-treeview-item-selected-gradient: null !default;
 
-/// Box shadow of focused treeview items.
+/// The box shadow of focused TreeView items.
 /// @group treeview
 $kendo-treeview-item-focus-shadow: inset 0 0 0 2px rgba( $kendo-treeview-text, .15 ) !default;
 
-/// Background color of load more.
+/// The background color of the Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-bg: transparent !default;
-/// Text color of load more.
+/// The text color of the Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-text: $kendo-link-text !default;
-/// Border color of load more.
+/// The border color of the Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-border: null !default;
 
-/// Background color of a hovered load more.
+/// The background color of the hovered Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-hover-bg: transparent !default;
-/// Text color of a hovered load more.
+/// The text color of the hovered Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-hover-text: $kendo-link-hover-text !default;
-/// Border color of a hovered load more.
+/// The border color of the hovered Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-hover-border: null !default;
 
-/// Background color of a focused load more.
+/// The background color of the focused Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-focus-bg: transparent !default;
-/// Text color of a focused load more.
+/// The text color of the focused Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-focus-text: $kendo-link-hover-text !default;
-/// Border color of a focused load more.
+/// The border color of the focused Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-focus-border: null !default;
-/// Box shadow of a focused load more.
+/// The box shadow of the focused Load More button in the TreeView.
 /// @group treeview
 $kendo-treeview-loadmore-focus-shadow: $kendo-treeview-item-focus-shadow !default;
