--- a/packages/classic/scss/editor/_variables.scss
+++ b/packages/classic/scss/editor/_variables.scss
@@ -20,4 +20,4 @@ $kendo-editor-resize-handle-border: #000000 !default;
 $kendo-editor-resize-handle-bg: #ffffff !default;
 
 $kendo-editor-selectednode-outline-width: 2px !default;
-$kendo-editor-selectednode-outline-color: #8cf !default; // sass-lint:disable-line hex-length
+$kendo-editor-selectednode-outline-color: #88ccff !default; // sass-lint:disable-line hex-length
