chore(core): resolve stylelint errors

--- a/packages/core/scss/_variables.scss
+++ b/packages/core/scss/_variables.scss
@@ -1,3 +1,5 @@
 // Equilateral triangle variables
+// stylelint-disable number-max-precision
 $equilateral-index: 1.7320508076 !default;
 $equilateral-height: .8660254038 !default;
+// stylelint-enable number-max-precision
