--- a/packages/core/scss/styles/index.import.scss
+++ b/packages/core/scss/styles/index.import.scss
@@ -1,6 +1,6 @@
 @import "./_accessibility.scss";
 @import "./_asp-fallback.scss";
-@import "./_layout";
+@import "./_layout.scss";
 @import "./_normalize.scss";
 
 
