--- a/packages/core/scss/functions/_color-contrast.import.scss
+++ b/packages/core/scss/functions/_color-contrast.import.scss
@@ -3,15 +3,13 @@
 
 //  Precomputed linear color channel values, for use in contrast calculations.
 //  See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
-//
 //  Algorithm, for c in 0 to 255:
 //  f(c) {
 //    c = c / 255;
 //    return c < 0.03928 ? c / 12.92 : Math.pow((c + 0.055) / 1.055, 2.4);
 //  }
-//
 //  This lookup table is needed since there is no `pow` in SASS.
-// stylelint-disable-next-line scss/dollar-variable-default
+// stylelint-disable number-max-precision
 $_linear-channel-values: (
     0
     .0003035269835488375
@@ -270,6 +268,7 @@ $_linear-channel-values: (
     .9911020971138298
     1
 );
+// stylelint-enable number-max-precision
 
 /// The contrast ratio to reach against white, to determine if color changes from "light" to "dark".
 /// Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
