--- a/packages/core/scss/functions/_custom-properties.import.scss
+++ b/packages/core/scss/functions/_custom-properties.import.scss
@@ -13,7 +13,7 @@
         @return null;
     }
 
-    @if $_prefix == null {
+    @if $_prefix == null { // stylelint-disable-line
         $_prefix: "";
     }
 
