--- a/packages/core/scss/mixins/_import-once.scss
+++ b/packages/core/scss/mixins/_import-once.scss
@@ -7,7 +7,7 @@ $_kendo-imported-modules: () !default;
 /// @param {String} $name - The name of the exported module.
 /// @require $_kendo-imported-modules
 @mixin exports( $name ) {
-    @if (k-list-index( $_kendo-imported-modules, $name ) == null) {
+    @if (k-list-index( $_kendo-imported-modules, $name ) == null) { // stylelint-disable-line
         $_kendo-imported-modules: k-list-append( $_kendo-imported-modules, $name ) !global;
         @content;
     }
